# rocket-screener

./: .env.example  .gitignore  BRAND.md  CLAUDE.md  DECISIONS.md  Dockerfile  README.md  SELF_TESTS.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/skills/: README.md
app/: __init__.py  __main__.py  config.py  run.py
app/evidence/: __init__.py  build_article1.py  build_article2.py  build_article3.py  schemas.py
app/features/: __init__.py  competition_analysis.py  event_scoring.py  hot_stock_scoring.py  supply_chain_chart.py  theme_detection.py  valuation_chart.py
app/ingest/: __init__.py  fmp_client.py  sec_client.py  thirteenf_client.py  transcript_client.py
app/llm/: __init__.py  client.py  extract_transcript_json.py  writer.py
app/normalize/: dedupe.py
app/ops/: __init__.py  alerts.py  deploy.md  qa_gate.py  runbook.md  versioning.py
app/publish/: __init__.py  ghost_client.py  minio_client.py  publish_posts.py
app/templates/: __init__.py  article1.md  article1_v2.md  article2.md  article2_v2.md  article3.md  article3_v2.md  newsletter_snippet.md  v2_field_mapping.md
roadmap/: v1.md  v10.md  v2.md  v3.md  v4.md  v5.md  v6.md  v7.md  v8.md  v9.md
scripts/: setup_cron.sh  update_13f_batch.py
tests/: __init__.py  test_config.py  test_dedupe.py  test_event_scoring.py  test_publish.py  test_qa_gate.py
